== 2.6.18 ==
Release date: 
* Fixed: Icon List - Icon Vertical Alignment was not working when link is added
* Enhancement: Set the minimum Elementor version required to 3.5.0

== 2.6.17 ==
Release date: August 10, 2022
* New: Display Conditions - Condition to check new or returning visitor
* Enhancement: Added option to filter used and unused widgets in PowerPack settings
* Enhancement: Advanced Posts - Added Image Box Shadow option
* Enhancement: Content Reveal – Added option to enable or disable the scroll top effect
* Enhancement: Added EM unit to Border radius controls in all widgets
* Enhancement: Logo Carousel - Added Pause on Hover option
* Fixed: Info Grid & Carousel - JS error when grid layout is selected
* Fixed: Instagram Feed - Removed the option "Likes" as Instagram Basic Display API does not support it
* Fixed: Instagram Feed - Removed the option "Comments" as Instagram Basic Display API does not support it
* Fixed: Instagram Feed - Removed the option "Feed by Hashtag" as Instagram Basic Display API does not support it
* Fixed: Icon List - Spacing issue with RTL layout
* Fixed: Advanced Posts - Exclude posts option
* Enhancement: Pricing Table - Added ppe_pricing_table_currency filter hook
* Fixed: PowerPack template library was not working with Elementor 3.7.0

== 2.6.16 ==
Release date: July 6, 2022
* Enhancement: Pricing Table - Added Icon Spacing option for tooltip icons
* Enhancement: Posts - Added Avoid Duplicates option
* Enhancement: Advanced Accordion - Added ability to open accordions using keypress
* Enhancement: WP Forms - Added styling options for Section Divider

== 2.6.15 ==
Release date: June 9, 2022
* Enhancement: Team Member Carousel - Added support for Tiktok social icon
* Enhancement: WPForms - Added compatibility for Modern style dropdown fields
* Enhancement: Info Box Carousel - Added compatibility for Elementor containers

== 2.6.14 ==
Release date: May 11, 2022
* Enhancement: Advanced Accordion - Added Custom CSS ID option